--- a/server/package.json
+++ b/server/package.json
@@ -9,5 +9,8 @@
     "express": "4.17.1",
     "mongoose": "5.11.18",
     "nodemon": "2.0.7"
+  },
+  "scripts": {
+    "start": "nodemon index.js"
   }
 }
